progs/tests/is/faulty_complex.sy
A :: blob {
    a: int,
    b: A,
}

B :: blob {
    a: int,
    b: B,
    c: int
}

:A is :B
:B is :A

C :: blob {
    a: int,
    b: fn C -> (C, C),
}

D :: blob {
    a: int,
    b: fn D -> (D, C),
    d: int
}

:C is :D
:D is :C

start :: fn {}

// error: Error:CompileError { .. }
// error: Error:CompileError { .. }
